@@ -2,6 +2,7 @@ Version 6.4.1
 - Added MKDIR function for BASIC
 - Added support for NeoYume style ARGv parameters in C
 - Fixed `-x` option in flexcc
+- Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
 - Made _geterror() clear the error number
 
 Version 6.4.0
